# dllm

./: .gitmodules  README.md  pyproject.toml
dllm/: __init__.py
dllm/core/: __init__.py
dllm/core/eval/: __init__.py  base.py  bd3lm.py  mdlm.py
dllm/core/generation/: __init__.py  chat_utils.py  generator.py  visualizer.py
dllm/core/samplers/: __init__.py  base.py  bd3lm.py  bm3lm.py  mdlm.py  utils.py
dllm/core/schedulers/: __init__.py  alpha.py
dllm/core/trainers/: __init__.py  bd3lm.py  bm3lm.py  mdlm.py
dllm/data/: __init__.py  alpaca.py  opc.py  utils.py
dllm/pipelines/: __init__.py
dllm/pipelines/a2d/: __init__.py  convert.py  eval.py  utils.py
dllm/pipelines/bert/: eval.py
dllm/pipelines/dream/: __init__.py  eval.py  (+4 more)
dllm/tools/: chat.py  preprocess_pt_dataset.py  preprocess_sft_dataset.py
dllm/utils/: __init__.py  chat.py  collators.py  configs.py  data.py  data_utils.py  model_utils.py  models.py  sampling.py  utils.py
examples/a2d/: README.md  chat.py  eval.sh  generate.py  pt.py  sample.py  sft.py
examples/bert/: README.md  chat.py  eval.sh  generate.py  pt.py  sample.py  sft.py
examples/dream/: README.md  chat.py  eval.sh  generate.py  pt.py  sample.py  sft.py
examples/editflow/: README.md  _README.md  pt.py  sample.py  sft.py
examples/llada/: README.md  chat.py  eval.sh  generate.py  pt.py  sample.py  sft.py
examples/rnd/: preprocess.py  sft.py  sft_v2.py  sft_v3.py
scripts/: eval.slurm.sh  train.slurm.sh
scripts/accelerate_configs/: fsdp.yaml  zero3_moe.yaml
scripts/tests/: test_attention.py  test_attention_mask.py
(+51 files in other folders)
